Adjust padding to fix spacing issue with larger menu

--- a/wp-content/themes/betheme-child/style29.css
+++ b/wp-content/themes/betheme-child/style29.css
@@ -12,6 +12,10 @@ Version: 2.0.1
   color-scheme: only light;
 }
 
+.mfn-header-menu > .mfn-menu-li > .mfn-menu-link {
+  padding: 8px 15px;
+}
+
 .mfn-main-slider.mfn-rev-slider {
   background: #002d6d;
 }
